--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.8.*",
         "laravel/telescope": "^2.0",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "spatie/packagist-api": "^1.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
