--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.8.*",
         "laravel/telescope": "^2.0",
-        "laravel/tinker": "^1.0",
-        "spatie/browsershot": "^3.31"
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
